--- a/thesis_skel/thesis_setup.tex
+++ b/thesis_skel/thesis_setup.tex
@@ -47,9 +47,9 @@ The T1 trigger consists of two parts/modes both of which need to be satisfied fo
 
 In June 2013, two additional T1 trigger modes were implemented in the Pierre Auger Observatory to reduce the influence of muons and reduce the energy threshold of the array. The two modes both of which build upon the ToT condition are time-over-threshold-deconvolved(ToTd) and multiplicity-of-positive-steps (MoPS).
 
-The ToTd trigger was first proposed internally in ~\cite{}. The trigger aims to deconvolve the FADC trace, suppressing the exponential tail of the diffusely reflected Cherenkov emission before applying the ToT condition. This helps in compressing the signal from a muon which typically has a fast rise time in one or two time bins before the application of the ToT condition. The trigger has an expected rate of 0.2-3Hz. ToTd also requires the integratd signal to be above 0.5VEM. An example of the functioning of the trigger is shown in fig.~\ref{}. 
+The ToTd trigger was first proposed internally in ~\cite{}. The trigger aims to deconvolve the FADC trace, suppressing the exponential tail of the diffusely reflected Cherenkov emission before applying the ToT condition. This helps in compressing the signal from a muon which typically has a fast rise time in one or two time bins before the application of the ToT condition. The trigger has an expected rate of 0.2-3Hz. ToTd also requires the integrated signal to be above 0.5VEM. An example of the functioning of the trigger is shown in fig.~\ref{}. 
 
-The MoPs trigger~\cite{} was implemented to achieve a similar goal as ToT and ToTd i.e a better separation between the air shower signal from the mostly muonic background. It is designed to do so by counting the number of positive steps(cumullation of successive increases) in the FADC trace within a 3$\mu$s sliding window. These steps are expected to be above a certain threshold (5xRMS noise) and below a maximum value(~0.5 VEM). The MoPs trigger is satisfied if more than 4 positive steps are counted during the sliding window in atleast 2 PMTs. The expected rates both from simulations and data taking are found to be <2Hz. MoPs is even better at recovering lower signals compared to ToT and ToTd thus improving the overall trigger efficiency. Both ToTd and MoPs are implemented as an or logic with the ToT condition. 
+The MoPs trigger~\cite{} was implemented to achieve a similar goal as ToT and ToTd i.e a better separation between the air shower signal from the mostly muonic background. It is designed to do so by counting the number of positive steps(cumullation of successive increases) in the FADC trace within a 3$\mu$s sliding window. These steps are expected to be above a certain threshold (5xRMS noise) and below a maximum value(~0.5 VEM). The MoPs trigger is satisfied if more than 4 positive steps are counted during the sliding window in atleast 2 PMTs. The expected rates both from simulations and data taking are found to be <2Hz. MoPs is even better at recovering lower signals compared to ToT and ToTd thus improving the overall trigger efficiency. Both ToTd and MoPs are implemented as an OR logic with the ToT condition. 
 
 These triggers particularly improve the trigger efficiency and sensitivity for photon and neutrino induced EAS. The trigger efficiencies for the different T1s implemented at the Pierre Auger Observatory is shown in fig~\ref{}. By rejecting the signals caused by muons or other low energetic particles the triggers are expected to increase the low energy threshold for the detection of these particles. They also help in recording more low electromagetic like signal which is the expected signature for photons and neutrinos. 
 
@@ -79,7 +79,7 @@ This part acts as an input and consists of the information about the individual 
 This part is used to store the important event variables required by modules or for the end physics analysis. This includes basic detector level information such as measured or reconstructed traces, trigger information etc. to reconstructed variables such as energy, direction or $X_{max}$. The information is transferred to the data processing modules based on the use case. For a simulation the event information is first provided to the modules to generate the detector response which is then further reconstructed. In such a case true MC values, detector response and the reconstructed quantities are all stored in the event data. Whereas, for real recorded data since the detector response is already present only the reconstruction is performed by the data processing modules. Event data acts as both an input and output for the data processing component of the framework.
 
 \paragraph*{Data processing:}
-The type of task performed by the $\mathrm{\overline{Off}\underline{line}}$ is controlled using the data processing component. The different tasks are implemented using individual modules where each module is a self-contained algorithm with access to read the detector description and to read and write event data. Since, the modules do not interact with each other they can be easily updated and new modules can be used in an analysis in a plug and play fashion. The different modules can be implemented sequentially in a chosen order based on the analysis controlled via a xml file called Modulesequence.xml. The modules also have adjustable parameters which can either be controlled using XML steering files of each module or using a central XML file called bootstrap.xml. There are various standard pre defined sets of module sequences and bootstraps available in the $\mathrm{\overline{Off}\underline{line}}$ framework which can be directly used without any alterations. For this analysis one standard reconstruction SdDglNeutrinoReconstruction was tweaked to perform a neutrino search with MoPs and Totd. Two new reconstructions modules SdDghNeutrinoReconstruction and SdNeutrinoSimulation based on previously done analyses were also conformed and added to the $\mathrm{\overline{Off}\underline{line}}$ framework. 
+The type of task performed by the $\mathrm{\overline{Off}\underline{line}}$ is controlled using the data processing component. The different tasks are implemented using individual modules where each module is a self-contained algorithm with access to read the detector description and to read and write event data. Since, the modules do not interact with each other they can be easily updated and new modules can be used in an analysis in a plug and play fashion. The different modules can be implemented sequentially in a chosen order based on the analysis controlled via a xml file called Modulesequence.xml. The modules also have adjustable parameters which can either be controlled using XML steering files of each module or using a central XML file called bootstrap.xml. There are various standard pre-defined sets of module sequences and bootstraps available in the $\mathrm{\overline{Off}\underline{line}}$ framework which can be directly used without any alterations. For this analysis one standard reconstruction SdDglNeutrinoReconstruction was tweaked to perform a neutrino search with MoPs and Totd. Two new reconstructions modules SdDghNeutrinoReconstruction and SdNeutrinoSimulation based on previously done analyses were also conformed and added to the $\mathrm{\overline{Off}\underline{line}}$ framework. The exact modules used in the different neutrino analyses and a description of their functionality is mentioned in the following chapters.
 
 \subsection{Advanced Data Summary Tree}
 \label{sec:ADST}
